--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,13 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body data-controller="modal">
+  <div id="flash" class="fixed top-5 right-5 z-50">
+    <%= render "shared/flash" %>
+  </div>
+
     <%= render 'layouts/navbar' %>
       <%= yield %>
-
+    <%= render 'shared/modal' %>
   </body>
 </html>
