--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,6 @@
 <% content_for :title, "Posts" %>
 
 <div class="w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
-  <% end %>
-
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Posts</h1>
-    <%= link_to "New post", new_post_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
-  </div>
-
   <div id="posts" class="min-w-full divide-y divide-gray-200 space-y-5">
     <% if @posts.any? %>
       <% @posts.each do |post| %>
@@ -23,7 +14,26 @@
         </div>
       <% end %>
     <% else %>
-      <p class="text-center my-10">No posts found.</p>
+      <div class="w-full min-h-screen">
+        <div class="py-10 px-8 items-center gap-6 grid grid-cols-1 lg:grid-cols-2">
+          <div class="text-center md:order-1 order-2">
+            <h1 class="text-primary font-semibold leading-6 mb-8 md:leading-[60px] md:text-5xl text-3xl">Platform For Important Stuff
+              <span class="font-extrabold text-6xl">Notes</span>
+              <%# TEMPORARY CODE FOR TESTING %>
+              <%= link_to "Get Started", new_post_path,
+                          data: {
+                            action: "click->modal#open",
+                            turbo_frame: "modal"
+                          },
+                          class: "bg-white hover:bg-gray-100 text-gray-800 font-semibold border border-gray-400 rounded shadow text-2xl md:text-4xl lg:text-5xl px-3 md:px-6 lg:px-8 py-1 md:py-2 lg:py-3" %>
+            </h1>
+            <p class="mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum fuga provident exercitationem voluptas reprehenderit, voluptatibus molestias porro harum, ipsam soluta recusandae aliquid non necessitatibus totam! Hic neque ipsa reiciendis. Sapiente!</p>
+          </div>
+          <div class="text-center md:order-2 order-1">
+            <%= image_tag 'main.svg', class: 'text-gray-800 text-sm font-semibold hover:text-purple-600 mr-4' %>
+          </div>
+        </div>
+      </div>
     <% end %>
   </div>
 </div>
