--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,14 +1,30 @@
-<div id="<%= dom_id post %>" class="w-full sm:w-auto my-5 space-y-5">
-  <div>
-    <strong class="block font-medium mb-1">Title:</strong>
+<%# This is your _post.html.erb partial %>
+<div id="<%= dom_id(post) %>"
+     class="relative group bg-white p-4 rounded-lg shadow flex flex-col">
+
+  <div class="absolute top-3 right-3 flex items-center space-x-2 opacity-0 pointer-events-none
+              group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-200 ease-in-out">
+    <%= link_to post_path(post), class: "inline-flex items-center justify-center h-8 w-8 rounded-full bg-white shadow hover:bg-gray-100 focus:outline-none", title: "Show", "aria-label": "Show post" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /><path stroke-linecap="round" stroke-linejoin="round" d="M2.458 12C3.732 7.943 7.523 5 12 5s8.268 2.943 9.542 7c-1.274 4.057-5.065 7-9.542 7S3.732 16.057 2.458 12z" /></svg>
+    <% end %>
+
+    <%= link_to edit_post_path(post), class: "inline-flex items-center justify-center h-8 w-8 rounded-full bg-white shadow hover:bg-gray-100 focus:outline-none", title: "Edit", "aria-label": "Edit post" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-700" viewBox="0 0 20 20" fill="currentColor"><path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z" /><path fill-rule="evenodd" d="M2 15.25V18h2.75l8.486-8.486-2.75-2.75L2 15.25z" clip-rule="evenodd" /></svg>
+    <% end %>
+
+    <%= link_to post_path(post), data: { turbo_method: :delete }, class: "inline-flex items-center justify-center h-8 w-8 rounded-full bg-white shadow hover:bg-gray-100 focus:outline-none", title: "Delete", "aria-label": "Delete post" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-red-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6M1 7h22" /></svg>
+    <% end %>
+  </div>
+
+  <p class="text-xs text-gray-500 mb-2"><%= post.created_at.strftime("%e %B, %Y") %></p>
+
+  <h2 class="text-lg font-semibold text-gray-800 mb-1 break-words">
+    <span class="inline-block w-2 h-2 rounded-full mr-2" style="background-color:<%= post.color %>"></span>
     <%= post.title %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Description:</strong>
-    <%= post.description %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Color:</strong>
-    <%= post.color %>
-  </div>
+  </h2>
+
+  <p class="text-gray-700 text-sm mb-3 break-words">
+    <%= truncate(post.description, length: 120) %>
+  </p>
 </div>
