--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,13 @@
   </head>
 
   <body data-controller="modal">
-  <div id="flash" class="fixed top-5 right-5 z-50">
-    <%= render "shared/flash" %>
-  </div>
-
-    <%= render 'layouts/navbar' %>
-      <%= yield %>
+    <div id="flash" class="fixed top-5 right-5 z-50">
+      <%= render "shared/flash" %>
+    </div>
+      <%= render 'layouts/navbar' %>
+        <main class="mx-auto py-4 px-4">
+          <%= yield %>
+        </main>
     <%= render 'shared/modal' %>
   </body>
 </html>
