--- a/app/views/posts/create.turbo_stream.erb
+++ b/app/views/posts/create.turbo_stream.erb
@@ -1,18 +1,8 @@
-<%# 1. Add the new post to the list %>
 <%= turbo_stream.prepend "posts", @post %>
-
-<%# 2. Show the success message %>
-<%= turbo_stream.update "flash", partial: "shared/flash" %>
-
-<%# 3. (THE FIX) This script uses the official Stimulus API to find the controller and run its close() action %>
+<%= turbo_stream.prepend "flash" do %>
+  <%= render "shared/flash" %>
+<% end %>
+<%= turbo_stream.remove "empty_posts" %>
 <%= turbo_stream.replace "modal" do %>
-  <%= turbo_frame_tag "modal" do %>
-    <script>
-        const application = window.Stimulus;
-        const modalController = application.getControllerForElementAndIdentifier(document.body, "modal");
-        if (modalController) {
-            modalController.close();
-        }
-    </script>
-  <% end %>
+  <%= turbo_frame_tag "modal" %>
 <% end %>
