--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,39 +1,32 @@
 <% content_for :title, "Posts" %>
 
 <div class="w-full">
-  <div id="posts" class="min-w-full divide-y divide-gray-200 space-y-5">
+  <div id="posts" class="mt-10 px-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
     <% if @posts.any? %>
       <% @posts.each do |post| %>
-        <div class="flex flex-col sm:flex-row justify-between items-center pb-5 sm:pb-0">
           <%= render post %>
-          <div class="w-full sm:w-auto flex flex-col sm:flex-row space-x-2 space-y-2">
-            <%= link_to "Show", post, class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-            <%= link_to "Edit", edit_post_path(post), class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-            <%= button_to "Destroy", post, method: :delete, class: "w-full sm:w-auto rounded-md px-3.5 py-2.5 text-white bg-red-600 hover:bg-red-500 font-medium cursor-pointer", data: { turbo_confirm: "Are you sure?" } %>
-          </div>
-        </div>
       <% end %>
     <% else %>
-      <div class="w-full min-h-screen">
-        <div class="py-10 px-8 items-center gap-6 grid grid-cols-1 lg:grid-cols-2">
-          <div class="text-center md:order-1 order-2">
-            <h1 class="text-primary font-semibold leading-6 mb-8 md:leading-[60px] md:text-5xl text-3xl">Platform For Important Stuff
-              <span class="font-extrabold text-6xl">Notes</span>
-              <%# TEMPORARY CODE FOR TESTING %>
-              <%= link_to "Get Started", new_post_path,
-                          data: {
-                            action: "click->modal#open",
-                            turbo_frame: "modal"
-                          },
-                          class: "bg-white hover:bg-gray-100 text-gray-800 font-semibold border border-gray-400 rounded shadow text-2xl md:text-4xl lg:text-5xl px-3 md:px-6 lg:px-8 py-1 md:py-2 lg:py-3" %>
-            </h1>
-            <p class="mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum fuga provident exercitationem voluptas reprehenderit, voluptatibus molestias porro harum, ipsam soluta recusandae aliquid non necessitatibus totam! Hic neque ipsa reiciendis. Sapiente!</p>
-          </div>
-          <div class="text-center md:order-2 order-1">
-            <%= image_tag 'main.svg', class: 'text-gray-800 text-sm font-semibold hover:text-purple-600 mr-4' %>
-          </div>
+  </div>
+    <div id="empty_posts" class="w-full min-h-screen">
+      <div class="py-10 px-8 items-center gap-6 grid grid-cols-1 lg:grid-cols-2">
+        <div class="text-center md:order-1 order-2">
+          <h1 class="text-primary font-semibold leading-6 mb-8 md:leading-[60px] md:text-5xl text-3xl">Platform For Important Stuff
+            <span class="font-extrabold text-6xl">Notes</span>
+            <%# TEMPORARY CODE FOR TESTING %>
+            <%= link_to "Get Started", new_post_path,
+                        data: {
+                          action: "click->modal#open",
+                          turbo_frame: "modal"
+                        },
+                        class: "bg-white hover:bg-gray-100 text-gray-800 font-semibold border border-gray-400 rounded shadow text-2xl md:text-4xl lg:text-5xl px-3 md:px-6 lg:px-8 py-1 md:py-2 lg:py-3" %>
+          </h1>
+          <p class="mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum fuga provident exercitationem voluptas reprehenderit, voluptatibus molestias porro harum, ipsam soluta recusandae aliquid non necessitatibus totam! Hic neque ipsa reiciendis. Sapiente!</p>
+        </div>
+        <div class="text-center md:order-2 order-1">
+          <%= image_tag 'main.svg', class: 'text-gray-800 text-sm font-semibold hover:text-purple-600 mr-4' %>
         </div>
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 </div>
