--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,20 +15,15 @@
           <a href="#" class="text-gray-800 text-sm font-semibold hover:text-purple-600 mr-4">Partners</a>
         </div>
         <div class="hidden sm:flex sm:items-center">
-          <button type="button"
-                  data-action="click->modal#open"
-                  data-turbo-frame="modal"
-                  class="text-gray-800 text-sm font-semibold hover:text-purple-600 mr-4">
+          <%= link_to "#", data: { turbo_frame: "modal" }, class: "text-gray-800 text-sm font-semibold hover:text-purple-600 mr-4" do %>
             Sign in
-          </button>
-          <button type="button"
-                  data-action="click->modal#open"
-                  data-turbo-frame="modal"
-                  class="text-gray-800 text-sm font-semibold border px-4 py-2 rounded-lg hover:text-purple-600 hover:border-purple-600">
+          <% end %>
+           <%= link_to "#", data: { turbo_frame: "modal" },
+                  class: "text-gray-800 text-sm font-semibold border px-4 py-2 rounded-lg hover:text-purple-600 hover:border-purple-600" do %>
             Sign up
-          </button>
+           <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </div>
