--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body data-controller="modal">
+  <body>
     <div id="flash" class="fixed top-5 right-5 z-50">
       <%= render "shared/flash" %>
     </div>
