--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,7 +8,9 @@
       <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /><path stroke-linecap="round" stroke-linejoin="round" d="M2.458 12C3.732 7.943 7.523 5 12 5s8.268 2.943 9.542 7c-1.274 4.057-5.065 7-9.542 7S3.732 16.057 2.458 12z" /></svg>
     <% end %>
 
-    <%= link_to edit_post_path(post), class: "inline-flex items-center justify-center h-8 w-8 rounded-full bg-white shadow hover:bg-gray-100 focus:outline-none", title: "Edit", "aria-label": "Edit post" do %>
+    <%= link_to edit_post_path(post), data: {
+      turbo_frame: "modal"
+    }, class: "inline-flex items-center justify-center h-8 w-8 rounded-full bg-white shadow hover:bg-gray-100 focus:outline-none", title: "Edit", "aria-label": "Edit post" do %>
       <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-700" viewBox="0 0 20 20" fill="currentColor"><path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z" /><path fill-rule="evenodd" d="M2 15.25V18h2.75l8.486-8.486-2.75-2.75L2 15.25z" clip-rule="evenodd" /></svg>
     <% end %>
 
