--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,19 @@
-<% content_for :title, "Showing post" %>
+<% content_for :title, "Note Details" %>
 
-<div class="md:w-2/3 w-full">
+<div class="max-w-2xl mx-auto bg-white shadow-md rounded-lg p-8">
   <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
+    <p class="py-2 px-3 bg-green-100 mb-5 text-green-700 font-semibold rounded-md text-center" id="notice"><%= notice %></p>
   <% end %>
 
-  <h1 class="font-bold text-4xl">Showing post</h1>
+  <h1 class="font-bold text-3xl mb-6 text-gray-800">Note Details</h1>
 
   <%= render @post %>
 
-  <%= link_to "Edit this post", edit_post_path(@post), class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <%= link_to "Back to posts", posts_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <%= button_to "Destroy this post", @post, method: :delete, form_class: "sm:inline-block mt-2 sm:mt-0 sm:ml-2", class: "w-full rounded-md px-3.5 py-2.5 text-white bg-red-600 hover:bg-red-500 font-medium cursor-pointer", data: { turbo_confirm: "Are you sure?" } %>
+  <div class="flex flex-col sm:flex-row gap-3 mt-8">
+    <%= link_to "Edit", edit_post_path(@post), data: {
+      turbo_frame: "modal"
+    }, class: "flex-1 text-center rounded-md px-4 py-2 bg-blue-100 hover:bg-blue-200 text-blue-700 font-semibold" %>
+    <%= link_to "Back", posts_path, class: "flex-1 text-center rounded-md px-4 py-2 bg-gray-100 hover:bg-gray-200 text-gray-700 font-semibold" %>
+    <%= button_to "Delete", @post, method: :delete, form_class: "flex-1", class: "w-full rounded-md px-4 py-2 text-white bg-red-600 hover:bg-red-500 font-semibold", data: { turbo_confirm: "Are you sure?" } %>
+  </div>
 </div>
