--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <%# This is your _post.html.erb partial %>
 <div id="<%= dom_id(post) %>"
-     class="relative group bg-white p-4 rounded-lg shadow flex flex-col">
+     class="px-4 py-4 group relative rounded-lg bg-white shadow-md hover:shadow-xl transition-shadow flex flex-col aspect-3/2">
 
   <div class="absolute top-3 right-3 flex items-center space-x-2 opacity-0 pointer-events-none
               group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-200 ease-in-out">
