--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,7 +1,7 @@
 <% flash.each do |type, message| %>
   <%# This data-controller attribute connects the div to your flash_controller.js %>
   <div data-controller="flash"
-       class="<%= type.to_s == 'alert' ? 'bg-red-500' : 'bg-green-500' %> text-white px-4 py-2 rounded-lg shadow-md mb-4">
+       class="<%= type.to_s == 'alert' ? 'bg-red-500' : 'bg-green-500' %> text-white px-4 py-2 top-7 z-51 rounded-lg shadow-md mb-4 ">
     <%= message %>
   </div>
 <% end %>
